feat: some changes, and new swagger
